# weather

./: CHANGELOG.md  README.md  dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  python-app.yml
requirements/: dev.txt  release.txt
src/: __init__.py  __main__.py  cli.py  core.py  utils.py
src/weather/: __init__.py  cli.py  config.py  core.py  utils.py
