[metadata]
name = cli-template
author = hentai-chan
author-email = dev.hentai-chan@outlook.com
url = https://github.com/Advanced-Systems/cli-template
license-file = LICENSE
license = GPLv3
description = A template repository for CLI scripts written in python.
long_description = file: README.md
long_description_content_type = text/markdown
python_requires = >= 3.8
install_requires =
    click
    pretty_errors
    wheel
classifiers = Development Status :: 3 - Alpha
              Intended Audience :: Developers
              Natural Language :: English
              Programming Language :: Python :: 3.8
              Programming Language :: Python :: 3.9
              Operating System :: OS Independent
keywords = utils terminal application template
project_urls = 
    Source Code = https://github.com/Advanced-Systems/cli-template
    Bug Tracker = https://github.com/Advanced-Systems/cli-template/issues

[options]
packages = find:
