[metadata]
name = weather
author = hentai-chan
author-email = dev.hentai-chan@outlook.com
url = https://github.com/hentai-chan/weather
license-file = LICENSE
license = GPLv3
description = Simple script for reading weather data in the terminal.
long_description = file: README.md
long_description_content_type = text/markdown
python_requires = >= 3.8
classifiers = Development Status :: 3 - Alpha
              Intended Audience :: Developers
              Natural Language :: English
              Programming Language :: Python :: 3.8
              Programming Language :: Python :: 3.9
              Operating System :: OS Independent
keywords = utils terminal application template
project_urls = 
    Source Code = https://github.com/hentai-chan/weather
    Bug Tracker = https://github.com/hentai-chan/weather/issues

[options]
packages = find:
include_package_data = true
